_sass/_variables.scss
$gray-1: #f9f9f9;
$gray-2: #ccc;
$gray-3: #939393;
$gray-4: #767676;
$gray-5: #515151;
$gray-6: #313131;

$red: #ac4142;
$orange: #d28445;
$yellow: #f4bf75;
$green: #90a959;
$cyan: #75b5aa;
$blue: #268bd2;
$brown: #8f5536;
$white-sand: #eee;

$root-font-family-regular: "BitterRegular", serif;
$root-font-family-bold: "BitterBold", serif;
$root-font-family-italic: "BitterItalic", serif;
$root-font-family-bolditalic: "BitterBoldItalic", serif;
$root-font-size: 16px;
$root-line-height: 1.5;

$body-color: $gray-5;
$body-bg: #fff;
$secondary-font-family-bold: "OpenSansBold", sans-serif;
$secondary-font-family-semibold: "OpenSansSemibold", sans-serif;
$link-color: $blue;

$border-color: #e5e5e5;

$large-breakpoint: 38em;
$large-font-size: 20px;

$code-font-family: "Inconsolata", monospace;
$code-color: #905;
$code-background-color: #f9f9f9;

